--- a/@ecomplus/storefront-framework/template/public/admin/index.html
+++ b/@ecomplus/storefront-framework/template/public/admin/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Content Manager</title>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="https://connect.facebook.net/en_US/fbevents.js"></script>
   <script <%- (options.partytown ? 'type="text/partytown"' : '') %> >
     !function(e){if(!window.pintrk){window.pintrk = function () {
         window.pintrk.queue.push(Array.prototype.slice.call(arguments))};var
